# parser-parser

./: .dockerignore  .gitignore  1.css  1.js  2.js  Cargo-154d9d02.js  Cargo-243eb557.js  Cargo-3a87c9e3.js  Cargo-3d153e1f.js  Cargo-524f0750.js  Cargo-5d5b01d6.js  Cargo-c529ac2e.js  Cargo-c68fe751.js  Cargo-e23578e7.js  Cargo.toml  Dockerfile  README.md  bundle.js  codemirror-096ce0b2.js  codemirror-3beccdb6.js  codemirror-5b2a2ad5.js  codemirror-9ea8e240.js  extra.css  global.css  index.html  jest.config.js  package-lock.json  package.json  parser-parser-core.wasm  rollup.config.js  svelte.config.js  tsconfig.json  wasm.wasm  webpack.config.js
.github/workflows/: cd.yml  ci.yml
app/: .prettierignore  .prettierrc.json  Cargo.toml  jest.config.js  package-lock.json  package.json  rollup.config.js
app/public/: global.css  index.html
app/scripts/: serve.js
app/src/: App.svelte  AppBar.svelte  index.js  lib.rs
app/tests/: App.test.js  integration.rs
base/: Cargo.toml
base/src/: ast.rs  error.rs  lib.rs
base/src/checker/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
core/src/: lib.rs
desktop/: package-lock.json  package.json  preload.js
ebnf/: Cargo.toml
ebnf/benches/: bench.rs
ebnf/src/: compiler.rs  error.rs  lib.rs
ebnf/src/lexer/: mod.rs  tests.rs
ebnf/src/parser/: ast.rs  mod.rs  tests.rs  tokens.rs  utils.rs
ebnf/src/preprocessor/: error.rs  mod.rs  tests.rs
public/: global.css  index.html
refs/: spec.ebnf  specinf.ebnf
scripts/: serve.js
site/src/: index.js
src/: App.svelte  index.js  lib.rs
src/core/: error.rs  mod.rs  (+1 more)
static/: index.html
tests/: App.spec.js  App.test.js  web.rs
web/: package-lock.json  package.json
(+70 files in other folders)
