[package]
name = "parser-parser-core"
version = "0.1.0"
description = "Core library for the Parser-parser"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
repository = "https://github.com/karolbelina/parser-parser/"
license = "MIT"
readme = "README.md"
keywords = ["EBNF", "parser", "parsing", "context-free grammar", "parser combinators"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.5", optional = true }
nom = "6.0.0-alpha1"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
